feat(ioc): 实例化工厂bean